--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "electron-screenshot": "^1.0.5",
     "electron-squirrel-startup": "^1.0.0",
+    "mousetrap": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
