--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "productName": "client",
   "version": "1.0.0",
   "description": "My Electron application description",
+  "proxy": "http://localhost:8080",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -45,6 +46,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "electron-screenshot": "^1.0.5",
     "electron-squirrel-startup": "^1.0.0",
     "mousetrap": "^1.6.5",
